<resources>
    <string name="app_name">WanAndroid</string>
    <string name="error_tips">不妙！加载失败了ヽ(≧Д≦)ノ\\n 告诉大佬一些可能的原因：\\n1.网络出小差啦，请检查网络\\n 2.服务器大哥的不定期抽风~</string>
    <string name="loading">正在加载...</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="wechat">公众号</string>
    <string name="project">项目</string>
    <string name="mine">我的</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="loginout">未登陆</string>
    <string name="level">等级</string>
    <string name="ranking">等级</string>
    <string name="coinCount">积分</string>
    <string name="mine_share">我的分享</string>
    <string name="mine_collect">我的收藏</string>
    <string name="about_me">关于我</string>
    <string name="mine_setting">设置</string>
</resources>
